--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.thymeleaf.cache=false
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bookstorythyme
-spring.datasource.username=root
-spring.datasource.password=calab
+#spring.datasource.url=jdbc:mysql://localhost:3306/bookstorythyme
+#spring.datasource.username=root
+#spring.datasource.password=calab
+
+#Heroku
+
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-03.cleardb.net/heroku_8305e1897e599ed?reconnect=true
+spring.datasource.username=b9d84f18516944
+spring.datasource.password=4d19f873
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
