--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.thymeleaf.cache=false
 #spring.datasource.username=root
 #spring.datasource.password=calab
 
-#Heroku
+#Heroku config
 
 
 spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-03.cleardb.net/heroku_8305e1897e599ed?reconnect=true
